--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Generated App</title>
     <style>body {
   font-family: Arial, sans-serif;
-  padding: 20px;
+  margin: 20px;
   background-color: #f9f9f9;
 }
 h1 {
@@ -14,10 +14,11 @@ h1 {
 }
 #file-list {
   list-style-type: disc;
-  margin-left: 20px;
+  padding-left: 20px;
 }
 li {
   font-size: 1.2em;
+  margin-bottom: 8px;
 }</style>
 </head>
 <body>
