--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@ ul {
   padding-left: 20px;
 }
 li {
-  font-size: 1.2em;
-  margin: 8px 0;
+  padding: 5px 0;
 }</style>
 </head>
 <body>
@@ -36,15 +35,29 @@ li {
 <script src="script.js"></script>
 </body>
 </html>
-    <script>document.addEventListener('DOMContentLoaded', () => {
-  const files = ['config.json', 'data.csv'];
-  const listContainer = document.getElementById('file-list');
-
-  files.forEach(file => {
-    const li = document.createElement('li');
-    li.textContent = file;
-    listContainer.appendChild(li);
-  });
-});</script>
+    <script>fetch('config.json')
+  .then(response => response.json())
+  .then(config => {
+    Promise.all([
+      fetch(config['attachments'][0]).then(res => res.text()),
+      fetch(config['attachments'][1]).then(res => res.text())
+    ])
+    .then(([jsonText, csvText]) => {
+      // Parse JSON file (not used for listing files but fetched as per instruction)
+      const jsonData = JSON.parse(jsonText);
+      // Parse CSV file to list filenames
+      const lines = csvText.trim().split('\n');
+      const filenames = lines.map(line => line.trim());
+      const listContainer = document.getElementById('file-list');
+      filenames.forEach(filename => {
+        const li = document.createElement('li');
+        li.textContent = filename;
+        listContainer.appendChild(li);
+      });
+    });
+  })
+  .catch(error => {
+    console.error('Error loading files:', error);
+  });</script>
 </body>
 </html>
